Am adaugat 5 controllere si service-uri + testele